Fixed long titles sometimes overflowing

--- a/src/components/MovieItem.module.css
+++ b/src/components/MovieItem.module.css
@@ -7,8 +7,8 @@
 }
 
 .content {
-  height: 8rem;
-  padding: 1.2rem 1rem;
+  height: 10rem;
+  padding: 1.5rem 1rem 0 1rem;
   color: var(--color-white);
 }
 
